# bengaluru-walkability-public-audit

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: admin-reports-list-no-data.md  update-report-status-failing.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  Cargo.toml  Dockerfile  entrypoint.sh
backend/migrations/: 001_init.sql  002_admin.sql  003_super_admin.sql  004_ward_boundaries.sql  005_organizations.sql  006_ward_org_scoping.sql  007_anti_abuse.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/db/: admin_queries.rs  admin_seed.rs  dedup_job.rs  mod.rs  queries.rs
backend/src/handlers/: admin.rs  mod.rs  reports.rs
backend/src/middleware/: auth.rs
backend/src/migrations_tests/: mod.rs  test_004_migration.rs  test_005_migration.rs
backend/src/models/: admin.rs  mod.rs  organization.rs  report.rs  ward.rs
backend/tests/: migration_phase2_test.rs
docs/: favicon-prompt.md  product-plan.md  run-log-2026-03-04.md  user-flow.md
docs/ac/: admin-auth-ac.md  admin-phase2-ac.md  (+3 more)
frontend/: .eslintrc.json  Dockerfile  jest.config.js  jest.setup.node.ts  jest.setup.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
nginx/: nginx.conf
(+96 files in other folders)
