[package]
name = "bengaluru-walkability-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
img-parts = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
jsonwebtoken = "9"
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["cookie"] }
# `time` is a transitive dep of `cookie` 0.18; declare it directly so we can
# use `time::Duration` for Cookie::set_max_age without relying on a re-export
# path that axum-extra does not expose.
time = "0.3"
base64 = "0.22"
